2016-08-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (regFree): Y is not free when using extended stack

2016-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genMinus): mark A as modified for reverse subtraction
	* src/z80/gen.c (genPointerGet,genUnpackBits): preserve pointer
	  register pair if not dead

2016-07-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/fwio.cc: try defining WINVER instead of _WIN32_WINNT
	* sim/ucsim/cmd.src/Makefile.in,
	* sim/ucsim/gui.src/Makefile.in,
	* sim/ucsim/sim.src/Makefile.in,
	* sim/ucsim/main_in.mk: omit -D option to ar, not supported by all ar

2016-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: added ExecutablePath
	* src/ds390/gen.c,
	* src/SDCCutil.c,
	* src/SDCCval.c,
	* src/stm8/gen.c,
	* src/stm8/main.c,
	* src/z80/peep.c: fixed warnings

2016-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Enable an optimization that was blocked on bug #2450.
	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp:
	  Fix bug #2467 (fix previously was blocked on bug #2450).
	* src/z80/peeph-tlcs90.def:
	  Remove leftover z80 peepholes that break on tlcs90.

2016-07-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (processBlockVars): fix bug #2450
	* support/regression/tests/inline.c: add test for bug #2450
	* src/hc08/gen.c (aopForSym): remove work-around

2016-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2529.c
	  Regression test for bug #2517.

2016-07-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/cmd.src/cmd_exec.cc
	* sim/ucsim/cmd.src/cmd_get.cc
	* sim/ucsim/cmd.src/command.cc
	* sim/ucsim/fuio.cc
	* sim/ucsim/s51.src/interrupt.cc
	* sim/ucsim/s51.src/uc51.cc
	* sim/ucsim/sim.src/mem.cc
	* sim/ucsim/stm8.src/itc.cc
	* sim/ucsim/utils.h
	  Fix build failures on cygwin.
	* src/SDCCicode.c
	* src/SDCCicode.h
	  Fix bug #2517.
